<?xml version="1.0"?>
<package format="2">
  <name>hook_gripper_gazebo</name>
  <version>0.1.0</version>
  <description>The hook_gripper_gazebo package</description>

  <maintainer email="kaartemov@gmail.com">Kirill Artemov</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>gazebo_dev</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}"/>
  </export>
</package>
